# memcore

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
src/memcore/: __init__.py  cli.py
src/memcore/core/: __init__.py  memory.py  types.py
src/memcore/storage/: __init__.py  base.py  in_memory.py
tests/: test_memory.py
