[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcore"
version = "0.1.0"
description = "A hierarchical memory system for AI agents inspired by MemGPT"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "AI Agent Research Team", email = "team@example.com"}
]
keywords = ["ai", "agent", "memory", "llm", "memgpt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
vector = [
    "chromadb>=0.4.0",
]
all = [
    "memcore[dev,vector]",
]

[project.scripts]
memcore = "memcore.cli:main"

[project.urls]
Homepage = "https://github.com/Carlos-Zen/memcore"
Documentation = "https://github.com/Carlos-Zen/memcore#readme"
Repository = "https://github.com/Carlos-Zen/memcore"
Issues = "https://github.com/Carlos-Zen/memcore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true